force-app/main/default/objects/Asset/fields/cUnite__Floor__c.field-meta.xml
<CustomField>
    <fullName>cUnite__Floor__c</fullName>
    <label>Floor</label>
    <type>Text</type>
    <length>20</length>
</CustomField>