force-app/main/default/objects/Asset/fields/cUnite__Is_Bookable__c.field-meta.xml
<CustomField>
    <fullName>cUnite__Is_Bookable__c</fullName>
    <label>Is Bookable</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>